<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.joooonho.SelectableRoundedImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@mipmap/photo_sample"
            app:sriv_border_color="#FF3399"
            app:sriv_border_width="2dp"
            app:sriv_left_bottom_corner_radius="16dp"
            app:sriv_left_top_corner_radius="16dp"
            app:sriv_right_bottom_corner_radius="16dip"
            app:sriv_right_top_corner_radius="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/round"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold" />

        <com.joooonho.SelectableRoundedImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@mipmap/photo_sample"
            app:sriv_border_color="#036d82"
            app:sriv_border_width="2dp"
            app:sriv_left_bottom_corner_radius="16dp"
            app:sriv_right_bottom_corner_radius="16dip" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/part"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold" />

        <com.joooonho.SelectableRoundedImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@mipmap/photo_sample"
            app:sriv_border_color="#FFCC00"
            app:sriv_border_width="2dp"
            app:sriv_oval="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/oval"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold" />

        <com.joooonho.SelectableRoundedImageView
            android:id="@+id/image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@mipmap/photo_sample"
            app:sriv_border_color="#000066"
            app:sriv_border_width="2dp" />

        <Button
            android:id="@+id/btn_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/customize"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>
